cmake_minimum_required(VERSION 3.12)
project(threading)
include(FindOpenMP)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")

add_executable(monteCarlo monteCarloPI.cpp)
add_executable(fractal fractal.cpp)
add_executable(OpenMpHelloWorld OpenMPHelloWorld.cpp)
add_executable(ParallelForPI ParallelForPI.cpp)
add_executable(ParallelBubbleSort ParallelBubbleSort.cpp)
add_executable(trapezodialFunction trapezodialFunction.cpp)
add_executable(openMPScheduling openMPScheduling.cpp)